<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="Next Event" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_unarchive_black_24dp"
        android:title="Team" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="Favourite" />

</menu>
