<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/ic_fav"
        android:icon="@drawable/ic_favorite_border_black_24dp"
        android:iconifiedByDefault="false"
        app:showAsAction="ifRoom"
        android:title="fav" />
</menu>